--- a/bin/control
+++ b/bin/control
@@ -31,7 +31,7 @@ function wait_for_postgres_availability {
 function start {
   if ! _is_running; then
     echo "Starting Postgres cartridge"
-    oo-erb conf/postgresql.conf.erb.hidden > conf/postgresql.conf
+    oo-erb conf/postgresql.conf.erb.hidden > data/postgresql.conf
 
     postgresql_context "nohup postgres |& /usr/bin/logshifter -tag postgresql &"
     wait_for_postgres_availability || error "Could not start Postgres" 70
