--- a/bin/control
+++ b/bin/control
@@ -205,6 +205,7 @@ function post_restore {
     fi
 
     cleanup_dump
+    stop
   else
     warning "Postgres restore attempted, but no dump found"
     warning "${dump_file} does not exist"
