--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -2,8 +2,9 @@
 Name: postgresql
 Architecture: noarch
 Cartridge-Short-Name: POSTGRESQL
-Cartridge-Version: 0.3.12
-Compatible-Versions: []
+Cartridge-Version: 0.3.13
+Compatible-Versions:
+- 0.3.12
 Cartridge-Vendor: redhat
 Display-Name: PostgreSQL 9.2
 Description: PostgreSQL is an advanced Object-Relational database management system
