--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -9,13 +9,12 @@ Compatible-Versions:
 - 0.3.14
 - 0.3.15
 - 0.3.16
-Cartridge-Vendor: redhat
-Display-Name: PostgreSQL 9.2
+Cartridge-Vendor: worldline
+Display-Name: PostgreSQL 9.0
 Description: PostgreSQL is an advanced Object-Relational database management system
-Version: '9.2'
+Version: '9.0'
 Versions:
-- '8.4'
-- '9.2'
+- '9.0'
 License: ASL 2.0
 Vendor: Red Hat
 Website: http://www.postgresql.org
@@ -39,7 +38,7 @@ Cart-Data:
   Type: cart_data
   Description: PostgreSQL DB connection URL
 Provides:
-- postgresql-9.2
+- postgresql-9.0
 - postgresql
 Publishes:
   publish-db-connection-info:
@@ -56,10 +55,3 @@ Endpoints:
   Public-Port-Name: DB_PROXY_PORT
   Protocols:
   - postgresql
-Version-Overrides:
-  '8.4':
-    Display-Name: PostgreSQL 8.4
-    Provides:
-    - postgresql-8.4
-    - postgresql
-    - postgresql(version) = 8.4
